--- a/src/components/LibraryItem.module.css
+++ b/src/components/LibraryItem.module.css
@@ -4,7 +4,7 @@
   border-radius: 5px;
   border: 1px solid #c7e7fc;
   display: grid;
-  grid-template-columns: 1fr repeat(2, 2fr) 1fr 3fr repeat(2, 1fr);
+  grid-template-columns: 1fr 2fr repeat(2, 1fr) 1fr 3fr repeat(2, 1fr);
   font-size: 1.2rem;
   text-transform: uppercase;
 }
