--- a/src/pages/LibraryPage.module.css
+++ b/src/pages/LibraryPage.module.css
@@ -47,7 +47,7 @@
 }
 
 .categoriesTask {
-  grid-template-columns: 1fr repeat(2, 2fr) 1fr 3fr 1fr 1fr;
+  grid-template-columns: 1fr 2fr repeat(2, 1fr) 1fr 3fr repeat(2, 1fr);
 }
 
 .item {
