--- a/src/pages/ProjectPageDetails.module.css
+++ b/src/pages/ProjectPageDetails.module.css
@@ -130,8 +130,6 @@ span {
 
 .name {
   width: 100%;
-  /* text-align: left; */
-  /* font-size: 2rem; */
   text-transform: uppercase;
   border-bottom: 1px solid #85caf9;
 }
@@ -202,6 +200,49 @@ span {
   top: 50%;
   right: -8%;
 }
+
+/* Supplier Detail classes */
+
+.details {
+  margin-top: 2rem;
+  width: 100%;
+  padding: 1rem;
+
+  text-transform: uppercase;
+}
+
+.details_title,
+.detail_container {
+  gap: 3rem;
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.detail_container {
+  font-size: 1.2rem;
+}
+
+.detail_data {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 2rem;
+  border-radius: 5px;
+  background-color: #f0f7fc;
+}
+
+.detail_label {
+  color: #0671b8;
+}
+
+.detail_info {
+  gap: 1rem;
+  display: flex;
+  justify-content: center;
+}
+
+/* Utility classes */
 
 .mLeft {
   margin-left: 3rem;
