--- a/src/components/DetailsItem.module.css
+++ b/src/components/DetailsItem.module.css
@@ -10,6 +10,25 @@
   border: 1px solid #c7e7fc;
 }
 
+.item_edit {
+  margin-top: 4rem;
+  padding: 1rem;
+  border: 2px solid #44b3fd;
+  position: relative;
+}
+
+.item_edit_text {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  padding: 5px;
+  color: #fff;
+  background-color: #44b3fd;
+  width: fit-content;
+  position: absolute;
+  top: 0;
+  transform: translateY(-100%);
+}
+
 .col_4 {
   grid-template-columns: repeat(4, 1fr);
 }
@@ -55,22 +74,24 @@
 
 .edit,
 .delete {
+  margin: 2px;
   display: flex;
   position: absolute;
   align-items: center;
-  height: 100%;
+  height: fit-content;
   width: auto;
-  padding: 5px;
   border-radius: 5px;
   opacity: 0;
   cursor: pointer;
 }
 
 .edit {
+  padding: 5px;
   background-color: #44b3fd;
 }
 
 .delete {
+  padding: 3px;
   right: 0;
   background-color: rgb(255, 62, 62);
 }
