ISSUE: One common component for list items is creating more problems to implement. To be decided if better to use dedicated components to avoid overcomplicated component

--- a/src/components/DetailsItem.module.css
+++ b/src/components/DetailsItem.module.css
@@ -33,6 +33,10 @@
   grid-template-columns: repeat(4, 1fr);
 }
 
+.col_4_bis {
+  grid-template-columns: repeat(2, 10rem) repeat(2, 1fr);
+}
+
 .col_5 {
   grid-template-columns: repeat(5, 1fr);
 }
