--- a/src/components/LibraryItem.module.css
+++ b/src/components/LibraryItem.module.css
@@ -7,10 +7,63 @@
   grid-template-columns: 1fr 2fr repeat(2, 1fr) 1fr 3fr repeat(2, 1fr);
   font-size: 1.2rem;
   text-transform: uppercase;
+  position: relative;
 }
 
-.item :not(div:first-of-type) {
+/* .item :not(div:first-of-type) {
   border-left: 1px solid #c7e7fc;
+} */
+
+.item > div:not(:first-child) {
+  border-left: 1px solid #c7e7fc;
+}
+
+.item_edit_text {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  padding: 5px;
+  color: #fff;
+  background-color: #44b3fd;
+  width: fit-content;
+  position: absolute;
+  top: 0;
+  transform: translateY(-100%);
+}
+
+.item:hover .edit {
+  opacity: 1;
+  transition: all 0.5s;
+  animation: slide-right 300ms ease-out forwards;
+}
+
+.item:hover .delete {
+  opacity: 1;
+  transition: all 0.5s;
+  animation: slide-left 300ms ease-out forwards;
+}
+
+.edit,
+.delete {
+  margin: 2px;
+  display: flex;
+  position: absolute;
+  align-items: center;
+  height: fit-content;
+  width: auto;
+  border-radius: 5px;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.edit {
+  padding: 5px;
+  background-color: #44b3fd;
+}
+
+.delete {
+  padding: 3px;
+  right: 0;
+  background-color: rgb(255, 62, 62);
 }
 
 .materialNumber,
@@ -25,4 +78,26 @@
   justify-content: center;
   align-items: center;
   justify-items: center;
+}
+
+@keyframes slide-right {
+  from {
+    opacity: 0;
+    transform: translateX(-2rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes slide-left {
+  from {
+    opacity: 0;
+    transform: translateX(2rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
