--- a/src/pages/LibraryPage.module.css
+++ b/src/pages/LibraryPage.module.css
@@ -71,6 +71,18 @@
   background-color: #44b3fd;
 }
 
+.info {
+  font-size: 1.4rem;
+  margin-top: 1.2rem;
+  margin-bottom: 1.2rem;
+  color: #44b3fd;
+}
+
+.info span {
+  font-weight: 400;
+  display: inline-block;
+}
+
 ::-webkit-scrollbar {
   width: 1rem;
 }
