--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100;200;300;400;500;600;700;800&display=swap");
 
 * {
   padding: 0;
@@ -8,7 +8,7 @@
 
 html {
   color: #555;
-  font-family: "Lato", "Arial", sans-serif;
+  font-family: "Encode Sans", sans-serif;
   font-weight: 300;
   font-size: 62.5%;
   text-rendering: optimizeLegibility;
