Specification creator: Issue with editing material is fixed. Now when editing rest of the materials are disabled

--- a/src/pages/ProjectPageDetails.module.css
+++ b/src/pages/ProjectPageDetails.module.css
@@ -169,9 +169,6 @@ span {
   cursor: pointer;
 }
 
-.formContainer {
-}
-
 .item:hover {
   background-color: #74b2db;
 }
@@ -203,6 +200,10 @@ span {
   position: absolute;
   padding: 1rem;
   background-color: #44b3fd;
+}
+
+.test {
+  font-size: 5rem;
 }
 
 .arrowClose {
