General: Cleanup + UI touch-ups at Welcome and New User Form. Specificaion Creator: Adding additional feedback for user in progres

--- a/src/components/forms/NewUserForm.module.css
+++ b/src/components/forms/NewUserForm.module.css
@@ -74,10 +74,7 @@ input:focus {
 }
 
 .buttons {
-  margin-top: 5rem;
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
+  grid-column: 1/3;
 }
 
 .buttons button {
