--- a/src/UI/LoadingSpinner.module.css
+++ b/src/UI/LoadingSpinner.module.css
@@ -1,16 +1,16 @@
 .spinner {
   display: inline-block;
-  width: 80px;
-  height: 80px;
+  width: 25px;
+  height: 25px;
+  margin-right: 5px;
 }
 .spinner:after {
   content: " ";
   display: block;
-  width: 64px;
-  height: 64px;
-  margin: 8px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
-  border: 6px solid #6ca3c7;
+  border: 5px solid #6ca3c7;
   border-color: #6ca3c7 transparent #6ca3c7 transparent;
   animation: spinner 1.2s linear infinite;
 }
