Specify: Migration to Router V6.7.0 in progress. Main routes fixed, minor updates at navigation.

--- a/src/components/Accordion.module.css
+++ b/src/components/Accordion.module.css
@@ -53,6 +53,20 @@
   margin-left: 1rem;
 }
 
+.accordionItem_active {
+  position: relative;
+  padding: 1.5rem;
+  border-radius: 5px;
+  background-color: #3a6887;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  transition: all 0.4s;
+  width: 100%;
+}
+
+.data {
+}
 /* .label {
   position: absolute;
   padding: 1rem;
