--- a/src/pages/StartPage.module.css
+++ b/src/pages/StartPage.module.css
@@ -93,6 +93,7 @@
   color: #fff;
   text-transform: uppercase;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .accordionItem {
@@ -111,6 +112,18 @@
 
 .accordionItem:active {
   background-color: #639bc0;
+}
+
+.active {
+  position: relative;
+  padding: 1.5rem;
+  border-radius: 5px;
+  background-color: #3a6887;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  transition: all 0.4s;
+  width: 100%;
 }
 
 .itemDescription {
@@ -135,6 +148,7 @@
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .tasks {
