Specify: Changed the approach of displaying data and fixed problem with forms. Now each form fits it location based on params.

--- a/src/components/spec-forms/NewMaterial.module.css
+++ b/src/components/spec-forms/NewMaterial.module.css
@@ -103,6 +103,10 @@ input:focus {
   box-shadow: none;
 }
 
+.empty_input {
+  border: 5px solid #ff3131 0.5;
+}
+
 .form {
   margin-top: 2rem;
   display: grid;
