--- a/src/pages/StartPage.module.css
+++ b/src/pages/StartPage.module.css
@@ -259,6 +259,16 @@
   margin-left: 3rem;
 }
 
+.info_message {
+  margin: 2rem 0;
+  font-size: 1.8rem;
+}
+
+.info_message span {
+  color: #44b3fd;
+  font-weight: 600;
+}
+
 ::-webkit-scrollbar {
   width: 1rem;
 }
