--- a/src/pages/SuppliersPage.module.css
+++ b/src/pages/SuppliersPage.module.css
@@ -68,6 +68,16 @@
   background-color: #44b3fd;
 }
 
+.info_message {
+  margin: 2rem 0;
+  font-size: 1.8rem;
+}
+
+.info_message span {
+  color: #44b3fd;
+  font-weight: 600;
+}
+
 ::-webkit-scrollbar {
   width: 1rem;
 }
