Specify: Improved CSS for main categories

--- a/src/pages/LibraryPage.module.css
+++ b/src/pages/LibraryPage.module.css
@@ -94,6 +94,9 @@
 .info_message {
   margin: 2rem 0;
   font-size: 1.8rem;
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
 }
 
 .info_message span {
