--- a/src/pages/StartPage.module.css
+++ b/src/pages/StartPage.module.css
@@ -262,6 +262,9 @@
 .info_message {
   margin: 2rem 0;
   font-size: 1.8rem;
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
 }
 
 .info_message span {
