--- a/src/components/Accordion.module.css
+++ b/src/components/Accordion.module.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   gap: 2rem;
   transition: all 0.4s;
-  width: 100%;
+  width: fit-content;
 }
 
 .accordionItem:hover {
@@ -24,6 +24,18 @@
   align-items: center;
   justify-content: space-between;
   color: #fff;
+}
+
+.accordionItemLabel {
+  position: absolute;
+  top: 50%;
+
+  transform: translateY(-50%);
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  background-color: #fff;
+  border: 2px solid #74b2db;
+  border-radius: 5px;
 }
 
 .itemList {
@@ -62,7 +74,7 @@
   flex-direction: column;
   gap: 2rem;
   transition: all 0.4s;
-  width: 100%;
+  width: fit-content;
 }
 
 .data {
