--- a/src/pages/StartPage.module.css
+++ b/src/pages/StartPage.module.css
@@ -99,14 +99,18 @@
 }
 
 .logout {
-  position: absolute;
-  top: 0;
-  left: 0;
   background-color: #c7e7fc;
   border-radius: 50%;
   padding: 5px;
   cursor: pointer;
   transition: all 300ms;
+}
+
+.absolute {
+  position: absolute;
+  position: absolute;
+  top: 0;
+  left: -1rem;
 }
 
 .accordionContainer {
@@ -115,7 +119,6 @@
   padding: 2rem 0.5rem 2rem 2rem;
   height: 100%;
   display: flex;
-
   align-items: center;
   width: 100%;
   flex-direction: column;
@@ -124,7 +127,7 @@
   color: #fff;
   text-transform: uppercase;
   overflow-y: scroll;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 .accordionItem {
