Library Page: Added dunction to download images for each material. Function to be fixed for all material list

--- a/src/components/LibraryItem.module.css
+++ b/src/components/LibraryItem.module.css
@@ -66,6 +66,11 @@
   background-color: rgb(255, 62, 62);
 }
 
+.materialImage {
+  width: 12rem;
+  height: 12rem;
+}
+
 .materialNumber,
 .materialName,
 .materialSupplier,
