--- a/src/components/LibraryItem.module.css
+++ b/src/components/LibraryItem.module.css
@@ -1,5 +1,6 @@
 .item {
   width: 100%;
+  height: 12rem;
   margin-top: 1rem;
   border-radius: 5px;
   border: 1px solid #c7e7fc;
@@ -83,6 +84,11 @@
   justify-content: center;
   align-items: center;
   justify-items: center;
+}
+
+.materialImg {
+  min-width: 12rem;
+  min-height: 12rem;
 }
 
 @keyframes slide-right {
