--- a/src/pages/StartPage.module.css
+++ b/src/pages/StartPage.module.css
@@ -232,7 +232,8 @@
 }
 
 .categoriesTask,
-.categoriesMessage {
+.categoriesMessage,
+.projectCategoriesTask {
   margin-top: 1rem;
   display: grid;
   font-size: 1.1rem;
@@ -245,6 +246,10 @@
 .categoriesMessage {
   grid-template-columns: repeat(3, 1fr) 3fr;
   /* grid-template-columns: 1fr 3fr; */
+}
+
+.projectCategoriesTask {
+  grid-template-columns: repeat(5, 1fr);
 }
 
 .item {
