Specify: Added search field for main library paga and category page. Added user feedback after creating new user. Fixed some minor bugs.

--- a/src/pages/ProjectPageDetails.module.css
+++ b/src/pages/ProjectPageDetails.module.css
@@ -62,6 +62,10 @@ input:focus {
   flex-wrap: nowrap;
 }
 
+.searchBox {
+  margin-top: 1rem;
+}
+
 .label_row__material {
   display: grid;
   width: 100%;
