--- a/src/components/forms/NewUserForm.module.css
+++ b/src/components/forms/NewUserForm.module.css
@@ -65,6 +65,11 @@ input:focus {
   gap: 1rem;
 }
 
+.warning {
+  outline-offset: 0ch;
+  outline: 5px solid #ff6666 !important;
+}
+
 .formGroup p {
   color: #6ca3c7;
   font-size: 1.2rem;
