Specification creator: Adding existing material from library finally works. Image is being fetched from right place. Require more tests.

--- a/src/pages/ProjectPageDetails.module.css
+++ b/src/pages/ProjectPageDetails.module.css
@@ -55,6 +55,11 @@ input:focus {
   }
 }
 
+.pdf_link {
+  font-size: 0.8rem !important;
+  text-align: center !important;
+}
+
 .materialLabel_container {
   display: flex;
   gap: 2rem;
