--- a/src/pages/StartPage.module.css
+++ b/src/pages/StartPage.module.css
@@ -152,6 +152,7 @@
 }
 
 .accordionItemTooltip {
+  z-index: 9999;
   position: relative;
   padding: 1.5rem;
   border-radius: 5px;
@@ -185,7 +186,7 @@
 .labels_container {
   position: absolute;
   left: 11rem;
-  z-index: 9999999999;
+
   display: flex;
   flex-direction: column;
   width: max-content;
