Specify: Added preview for PDF files for each project. Each button will represent/load different specification

--- a/src/UI/Modal.module.css
+++ b/src/UI/Modal.module.css
@@ -9,19 +9,12 @@
 }
 
 .modal {
-  /* position: absolute;
-  top: 50%;
-  left: 50%; */
   position: fixed;
   top: 15%;
-  left: 20%;
+  left: 10%;
   transform: translate(-50%, -50%);
-  width: 60%;
-  /* top: 25%;
-  bottom: 25%;
-  left: 35%;
-  right: 35%; */
-  /* width: fit-content; */
+  width: 80%;
+  height: 75vh;
   background-color: #f8f9fd;
   padding: 1rem;
   border-radius: 15px;
