--- a/src/UI/Modal.module.css
+++ b/src/UI/Modal.module.css
@@ -10,11 +10,11 @@
 
 .modal {
   position: fixed;
-  top: 15%;
+  top: 10%;
   left: 10%;
   transform: translate(-50%, -50%);
   width: 80%;
-  height: 75vh;
+  height: 85vh;
   background-color: #f8f9fd;
   padding: 1rem;
   border-radius: 15px;
@@ -25,6 +25,7 @@
 
 .content {
   padding: 5rem;
+  height: 100%;
 }
 
 button {
