--- a/src/components/forms/PreviewPDF.module.css
+++ b/src/components/forms/PreviewPDF.module.css
@@ -6,3 +6,20 @@ iframe {
 button:not(:first-child) {
   margin-left: 1rem;
 }
+
+.info_message {
+  position: absolute;
+  display: inline;
+  margin: 2rem 0;
+  font-size: 2.2rem;
+  line-height: 1.5;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.info_message span {
+  color: #44b3fd;
+  font-weight: 600;
+  display: inline;
+}
